Implementação do backend com Primic CMS

--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@prismicio/client": "^4.0.0",
+    "@prismicio/react": "^2.1.2",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
+    "nextjs-progressbar": "^0.0.14",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -23,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.42",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
